# agentic-real-estate-loop

./: .env.example  .gitignore  README.md  pyproject.toml  realestate.py  requirements.txt  serve.py
.github/workflows/: ci.yml
data/: comparables.json  listings.json  market_data.json
docs/: architecture.md
examples/: _common.py  run_broker_session.py  run_phase1.py  run_phase2_loops.py
src/real_estate_loop/: __init__.py  __main__.py  cli.py  orchestrator.py  persistence.py
src/real_estate_loop/agents/: __init__.py  base.py  communication.py  document_review.py  market_intelligence.py  property_search.py  supervisor.py  validator.py  valuation.py
src/real_estate_loop/core/: __init__.py  config.py  guardrails.py  llm.py  schemas.py
src/real_estate_loop/knowledge/: __init__.py  data_sources.py  vector_store.py
src/real_estate_loop/loops/: __init__.py  evaluation.py  intent_optimizer.py  loop_engine.py  memory_evolution.py  performance_optimizer.py  prompt_optimizer.py  retrieval_optimizer.py
src/real_estate_loop/memory/: __init__.py  broker_memory.py  client_memory.py  store.py
src/real_estate_loop/telemetry/: __init__.py  metrics.py
src/real_estate_loop/web/: __init__.py  __main__.py  api.py  server.py
src/real_estate_loop/web/static/: index.html
tests/: test_cli.py  test_dataset.py  test_loops.py  test_orchestrator.py  test_persistence.py  test_phase1_agents.py  test_web_api.py
