[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-real-estate-loop"
version = "0.1.0"
description = "Real Estate AI Agent Orchestrator with a self-improving Loop Engine (Loop Engineering 2026 pattern)."
requires-python = ">=3.10"
dependencies = ["pydantic>=2.5"]

[project.scripts]
realestate = "real_estate_loop.cli:run"
realestate-web = "real_estate_loop.web.server:run"

[project.optional-dependencies]
llm = ["openai>=1.30"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
real_estate_loop = ["web/static/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
